--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button type="submit">HIRE ME</button>
         </div>
         <div class="first">
-            <img src="https://ibb.co/g98SKkM" alt="">
+            <img src="../my-image/protfolio1.png" alt="">
         </div>
 
     </section>
