--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <button type="submit">HIRE ME</button>
         </div>
         <div class="first">
-            <img src="../my-image/protfolio1.png" alt="">
+            <img src="/my-image/protfolio1.png" alt="">
         </div>
 
     </section>
 
     <section class="sec2">
         <div class="first">
-              <img src="../my-image/protfolio2.png" alt="">
+              <img src="/my-image/protfolio2.png" alt="">
         </div>
         <div class="first">
           <h1>Dream Big</h1>
